# lighter-md

./: README.md  pyproject.toml
scripts/: dev.sh
src/lighter_md/: __init__.py  analytics.py  bus.py  config.py  dashboard.py  dto.py  market_metadata.json  store.py  ws_client.py  ws_manager.py
src/lighter_md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lighter_md/static/: app.js  funding.js
src/lighter_md/templates/: charts.html  funding.html  index.html
tests/: test_analytics.py  test_integration.py  test_parse.py  test_store.py
