[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighter-md"
version = "0.1.0"
description = "Lighter.xyz market data streamer and dashboard"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Team" }]
dependencies = [
  "websockets>=12.0",
  "orjson>=3.10",
  "pydantic>=2.7",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "anyio>=4.3",
  "rich>=13.7",
]

[project.scripts]
lighter-md = "lighter_md.dashboard:main"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lighter_md = ["templates/*.html", "static/*.js", "market_metadata.json"]

[tool.uv]
# optional uv settings
